frontend/ps-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ps-frontend
  labels:
    app: ps-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ps-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ps-frontend
    spec:
      containers:
      - image: 197966029048.dkr.ecr.us-west-1.amazonaws.com/decompany/frontend-dev:latest
        imagePullPolicy: Always
        name: ps-frontend
        ports:
        - containerPort: 80
          protocol: TCP
