frontend/ps-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ps-frontend
spec:
  type: ClusterIP
  selector:
    app: ps-frontend
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 80
