frontend/ps-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:197966029048:certificate/6f660693-54df-4cd0-85c4-d226c6a104eb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'  
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ps-frontend
              servicePort: 80
